--- a/TermTracker.Android/TermTracker.Android.csproj
+++ b/TermTracker.Android/TermTracker.Android.csproj
@@ -62,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Renderer\CustomEndDatePickerRenderer.cs" />
+    <Compile Include="Renderer\CustomStartDatePickerRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
